# scene_rdl2

./: .acignore  .clang-format  .gitignore  CMakeLists.txt  README.md  SConscript  SDKScript  cmake_dwa_env.sh  flowpipeline.yaml  package.py
cmd/mcrt_cmd/: CMakeLists.txt
cmd/mcrt_cmd/affinityMapTool/: AffinityMapTool.cc  AffinityMapTool.h  CMakeLists.txt  main.cc
cmd/mcrt_cmd/numaInfo/: CMakeLists.txt  NumaInfo.cc  NumaInfo.h  main.cc
cmd/mcrt_cmd/shmFbDump/: CMakeLists.txt  main.cc
cmd/mcrt_cmd/shmFbTool/: CMakeLists.txt  ShmFbTool.cc  ShmFbTool.h  main.cc
cmd/mcrt_cmd/shmFootmarkDump/: CMakeLists.txt  main.cc
cmd/mcrt_cmd/shmUtilTool/: CMakeLists.txt  ShmUtilTool.cc  ShmUtilTool.h  main.cc
cmd/mcrt_cmd/snapshotDeltaDump/: CMakeLists.txt  SConscript  snapshotDeltaDump.cc
cmd/mcrt_cmd/threadPoolExecutorTest/: CMakeLists.txt  main.cc
cmd/rdl2_cmd/rdl2_json_exporter/: CMakeLists.txt  SConscript  printers.h  rdl2_json_exporter.cc
cmd/rdl2_cmd/rdl2_localize/: CMakeLists.txt  LocalizableAttributes.cc  LocalizableAttributes.h  Localizer.cc  Localizer.h  MinUniqueSuffixMap.cc  MinUniqueSuffixMap.h  PathTree.cc  PathTree.h  SConscript  rdl2_localize.cc
cmd/rdl2_cmd/rdl2_print/: CMakeLists.txt  Options.h  SConscript  printers.cc  printers.h  rdl2_print.cc
lib/common/fb_util/: ActivePixels.cc  ActivePixels.h  CMakeLists.txt  FbTypes.h  GammaF2C.cc  GammaF2C.h  GammaF2CLUT.cc  GammaF2CLUT.h  PixelBuffer.h  PixelBufferUtilsGamma8bit.cc  PixelBufferUtilsGamma8bit.h  ReGammaC2F.cc  ReGammaC2F.h  ReGammaC2FLUT.cc  ReGammaC2FLUT.h  ReSrgbC2F.cc  ReSrgbC2F.h  ReSrgbC2FLUT.cc  ReSrgbC2FLUT.h  RunningStats.h  SConscript  SnapshotDeltaTestUtil.cc  SnapshotDeltaTestUtil.h  SnapshotUtil.cc  SnapshotUtil.h  SparseTiledPixelBuffer.h  SrgbF2C.cc  SrgbF2C.h  SrgbF2CLUT.cc  SrgbF2CLUT.h  StatisticalTestSuite.h  StatisticsPixelBuffer.h  TileExtrapolation.cc  TileExtrapolation.h  Tiler.h  VariablePixelBuffer.cc  VariablePixelBuffer.h
lib/common/fb_util/ispc/: CMakeLists.txt  PixelBuffer.hh  SConscript  SnapshotUtil.ispc  VariablePixelBuffer.ispc  VariablePixelBuffer.isph
lib/common/grid_util/: ActiveBitTable.cc  ActiveBitTable.h  ActivePixelsArray.cc  ActivePixelsArray.h  AffinityMapTable.cc  AffinityMapTable.h  AffinityResourceControl.cc  AffinityResourceControl.h  Arg.cc  Arg.h  BinPacketDictionary.cc  BinPacketDictionary.h  CMakeLists.txt  CpuSocketUtil.cc  CpuSocketUtil.h  DebugConsoleDriver.cc  DebugConsoleDriver.h  Fb.cc  Fb.h  FbActivePixels.cc  FbActivePixels.h  FbActivePixelsAov.h  FbAov.cc  FbAov.h  FbReferenceType.cc  FbReferenceType.h  FbUtils.h  Fb_accumulate.cc  Fb_conv888.cc  Fb_copy.cc  Fb_fbd.cc  Fb_get.cc  Fb_minusOne.cc  Fb_ppm.cc  Fb_setup.cc  Fb_snapshotDelta.cc  Fb_untile.cc  FloatValueTracker.cc  FloatValueTracker.h  LatencyLog.cc  (+51 more)
lib/common/math/: BBox.h  BBox2iIterator.h  CMakeLists.txt  Col3.h  Col4.h  Color.h  ColorSpace.cc  ColorSpace.h  Constants.h  Mat3.h  Mat4.h  Math.h  MathUtil.h  Permutation.h  Quaternion.h  ReferenceFrame.h  SConscript  Transcendental.cc  Transcendental.h  Types.cc  Vec2.h  Vec3.h  Vec3ba.h  Vec3ba_mic.h  Vec3fa.h  Vec3fa_mic.h  Vec3ia.h  Vec3ia_mic.h  Vec4.h  Viewport.h  Xform.h  avx.h  avxb.h  avxf.h  avxi.h  avxi_emu.h  immintrin_emu.h  mic.h  mic_f.h  mic_i.cpp  (+15 more)
lib/common/math/ispc/: CMakeLists.txt  Col3.isph  Col4.isph  Color.isph  Dual.isph  (+21 more)
lib/common/platform/: CMakeLists.txt  DebugLog.h  HybridUniformData.h  HybridUniformData.hh  HybridVaryingData.h  HybridVaryingData.hh  Intrinsics.h  IspcUtil.h  IspcUtil.isph  Platform.cc  Platform.h  Platform.hh  Platform.isph  SConscript
lib/common/rec_time/: CMakeLists.txt  RecDouble.h  RecTick.h  RecTime.cc  RecTime.h  RecTimeLap.cc  RecTimeLap.h  RecUInt64.h  SConscript
lib/pdevunit/: CMakeLists.txt  SConscript  pdevunit.cc  pdevunit.h
lib/render/cache/: CMakeLists.txt  CacheAllocator.h  CacheDequeue.cc  CacheDequeue.h  CacheEnqueue.cc  CacheEnqueue.h  CacheUtil.h  SConscript  ValueContainerDequeue.cc  ValueContainerDequeue.h  ValueContainerEnqueue.cc  ValueContainerEnqueue.h  ValueContainerUtils.cc  ValueContainerUtils.h
lib/render/util/: AlignedAllocator.h  Alloc.h  Arena.cc  Arena.h  Arena.isph  Args.cc  Args.h  Array2D.h  Atomic128.h  AtomicFloat.h  BitUtils.h  BitUtils.isph  BlockAllocatorCheck.h  CMakeLists.txt  CpuAffinityMask.cc  CpuAffinityMask.h  CpuSocketUtil.cc  CpuSocketUtil.h  Files.cc  Files.h  FloatingPointExceptionsRAII.h  GUID.cc  GUID.h  GetEnv.cc  GetEnv.h  IndexableArray.h  LuaScriptRunner.cc  LuaScriptRunner.h  MemPool.h  Memory.h  MiscUtils.h  NumaUtil.cc  NumaUtil.h  ProcCpuAffinity.cc  ProcCpuAffinity.h  Random.h  Random.isph  ReaderWriterMutex.h  RealUtil.h  Ref.h  (+15 more)
lib/scene/rdl2/: .clang-format  AsciiReader.cc  AsciiReader.h  AsciiWriter.cc  AsciiWriter.h  Attribute.cc  Attribute.h  AttributeKey.h  BinaryReader.cc  BinaryReader.h  BinaryWriter.cc  BinaryWriter.h  CMakeLists.txt  Camera.cc  Camera.h  CommonAttributes.h  Displacement.cc  Displacement.h  DisplayFilter.cc  DisplayFilter.h  Dso.cc  Dso.h  DsoFinder.cc  DsoFinder.h  EnvMap.cc  EnvMap.h  Geometry.cc  Geometry.h  GeometrySet.cc  GeometrySet.h  ISPCSupport.h  IndexIterator.h  Joint.cc  Joint.h  Layer.cc  Layer.h  Light.cc  Light.h  LightFilter.cc  LightFilter.h  (+57 more)
mod/python/py_scene_rdl2/: CMakeLists.txt  README.md  SConscript  __init__.py  boost_python.h  py_scene_rdl2.cc  py_scene_rdl2.h  py_scene_rdl2_attribute.cc  py_scene_rdl2_camera.cc  py_scene_rdl2_displacement.cc  py_scene_rdl2_enums.cc  py_scene_rdl2_envmap.cc  py_scene_rdl2_geometry.cc  py_scene_rdl2_geometry_set.cc  py_scene_rdl2_helpers.cc  py_scene_rdl2_helpers.h  py_scene_rdl2_layer.cc  py_scene_rdl2_light.cc  py_scene_rdl2_light_filter.cc  py_scene_rdl2_light_set.cc  py_scene_rdl2_map.cc  py_scene_rdl2_material.cc  py_scene_rdl2_metadata.cc  py_scene_rdl2_misc.cc  py_scene_rdl2_node.cc  py_scene_rdl2_proxies.cc  py_scene_rdl2_render_output.cc  py_scene_rdl2_scene_class.cc  py_scene_rdl2_scene_context.cc  py_scene_rdl2_scene_object.cc  py_scene_rdl2_scene_variables.cc  py_scene_rdl2_types.cc  py_scene_rdl2_userdata.cc
(+326 files in other folders)
