# Copyright 2023-2025 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(affinityMapTool)
add_subdirectory(numaInfo)
add_subdirectory(shmFbDump)
add_subdirectory(shmFbTool)
add_subdirectory(shmFootmarkDump)
add_subdirectory(snapshotDeltaDump)
add_subdirectory(threadPoolExecutorTest)
